Changes
=======

0.13 (unreleased)
-----------------

- Nothing changed yet.


0.12 (2011-11-29)
-----------------

- API expansion: added ``getAllWindow*`` and ``selectWindow``.


0.11 (2011-09-15)
-----------------

- Added some notes how to test a Zope 2 WSGI application.

- Described how to test a Zope 2/Plone application if using `plone.testing`
  to set up test layers.


0.10.1 (2011-02-02)
-------------------

- Improvements on the README.

- Wrote a quick start section for packages using ZTK but using
  ``zope.app.wsgi.testlayer`` instead of ``zope.app.testing``.

- Allowed to use `regexp` as pattern prefix for regular expressions
  additionally to `regex` to be compatible with the docstring and the
  Selenium documentation.


0.10 (2011-01-18)
-----------------

- Script that generates python tests from Selenium HTML tables.
  Reused from KSS project, courtesy of Jeroen Vloothuis, original author.

- Using a URL of `Selenium RC` in README where version 1.0.3 can be
  downloaded (instead of 1.0.1) which works fine with Firefox on Mac OS X,
  too.

0.9 (2010-12-28)
----------------

- Provide integration with the recent testlayer approach
  (zope.app.appsetup/zope.app.wsgi) used by Grok (#8260).
- Provide integration with plone.testing
- Make browser and RC server configurable (#6484).
- Show current test case in command log (#7876).
- Raise readable error when connection to RC server fails (#6489).
- Quit browser when the testrunner terminates (#6485).


0.8 (2010-10-22)
----------------

- Fixed tests for the StaticFilesLayer to pass with Python 2.4 through 2.7.
- API expansion: ``getSelectOptions``


0.7 (2010-08-16)
----------------

- API expansion: ``getElementHeight|Width``, ``getCookie*`` and a few others.
- lots of action methods (``mouse*`` among others)


0.6 (2010-08-09)
----------------

- assertXpathCount now also takes ints (#7681).

- API expansion: add ``isChecked`` to verify checkboxes, ``runScript``,